--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -17,7 +17,7 @@
         document.head.append(tag)
       }
 
-      initFudge('YOUR_TOKEN_HERE')
+      initFudge('test8394-1627-44c9-848f-38971fcaef34')
     </script>
   </head>
   <body>
